fixed info about workers in first section on mobile. Added some content to section for hotels.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div style="height: 33.3vh; line-height: 33.3vh; padding: 0 15px 15px 15px; background-color: #00b353ff" id="dzieci">
           <span> <h3> DLA DZIECI </h3> </span>
           <!-- rozwijanie dla dzieci -->
-          <div style="line-height: 150%;" id="tresc">
+          <div style="line-height: 150%;" class="tresc">
               <!-- wybor czy urodzinki itd -->
               <div id="dzieciMenu">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="uro">
@@ -582,6 +582,10 @@
                   Zaproś naszych animatorów do swojego hotelu! Spodziewasz się wizyty większej ilości małych gości?
                   A może chciałbyś by rodziny z dziećmi chętniej odwiedzały Państwa Hotel. Warto zatrudnić animatora- będzie dobrą duszą hotelu.
                 </p>
+                <p>Współpracujemy z:</p>
+                <a href="http://www.dosloncespa.pl/pl" target="-_blank">
+                  <img src="src/logo-mercure.jpg" style="border-radius: 10%; position: relative; left: 0; right:0; margin: 0 auto; width: 50vw;"></img>
+                </a>
                 <h4 style="margin-top: 10px;"><a href="#kontakt"> Kliknij, aby przejść do kontaktu. </br>
                 <p id="endHot"> </p>
                 <span class="glyphicon glyphicon-chevron-down"> </span></a></h4>
@@ -589,10 +593,18 @@
           </div>
         </div>
         <div style="height: 33.3vh; line-height: 33.3vh; padding-left: 15px; background-color: #f47e57ff" id="dorosli">
-          <span> <h3> DLA DOROSŁYCH </h3> </span>
+          <span> <h3> SZKOLENIA </h3> </span>
           <!-- Treść dla dorosłych -->
-          <h2 style="display: none;"> Już wkrótce... </h2>
-          <img src="src/piktogramy/wkrotce.png"> </img>
+          <div class="tresc" style="display: none;">
+          <h4> Wspólnie z <a href="http://www.cbis.com.pl/" target="_blank">Centrum Bezpieczeństwa i Szkoleń Bracia</a> przygotowujemy dla Was kursy animacyjne. </h4>
+          <img src="src/logo-bracia.jpg" style="border-radius: 15%; width: 60vw; height: auto; position: relative; left: 0; right: 0; margin: 10px auto;"></img>
+          <ul>
+            <li> Podstawowy kurs animacji czasu wolnego </li>
+            <li> Rozszerzony kurs animacji czasu wolnego </li>
+            <li> Kurs animacji zabaw dla dzieci </li>
+          </ul>
+          <h4> Szczegóły i zapisy wkrótce. </h4>
+          </div>
         </div>
         <div style="height: 33.4vh; line-height: 33.4vh; padding-left: 15px; background-color: #f04248ff;" id="eventy">
           <span> <h3> ORGANIZACJA EVENTÓW </h3> </span>
@@ -602,14 +614,42 @@
     </div>
 
     <div style="height: auto; padding: 30px 15px 30px 15px; text-align: center; background-color: #f15a29ff" id="wyjazdy">
-      <div class="slider">
-        <div> <img src="src/zdj/kolonie1.JPG"  > </img> </div>
-        <div> <img src="src/zdj/kolonie2.JPG"  > </img> </div>
-        <div> <img src="src/zdj/kolonie3.JPG"  > </img> </div>
-        <div> <img src="src/zdj/kolonie4.JPG"  > </img> </div>
-      </div>
       <h4> Animatu organizuje lub współorganizuje także kolonie, półkolonie i zimowiska. </br>
        Tu będzie można znaleźć informację o najbliższych organizowanych obozach. </h4>
+       <div class="slider">
+         <div> <img src="src/zdj/kolonie1.JPG"  > </img> </div>
+         <div> <img src="src/zdj/kolonie2.JPG"  > </img> </div>
+         <div> <img src="src/zdj/kolonie3.JPG"  > </img> </div>
+         <div> <img src="src/zdj/kolonie4.JPG"  > </img> </div>
+       </div>
+      <h2> Wspinaczkowy dzień dziecka </h2>
+      <h4> Jeśli Twoje dziecko:
+      <ul>
+        <li><p>uwielbia aktywność na świeżym powietrzu.</li>
+        <li><p>rozpiera energia i nie ma w domu mebla na którym nie postawiło swojej stopy. </p></li>
+        <li><p>kocha góry lub Ty chcesz je zarazić turystyczno - górską pasją.</p></li>
+      </ul>
+      To rozumiemy! Nasi rodzice mieli ten sam kłopot. </h4>
+      <h4>Najlepszym lekarstwem na te przypadłości będzie
+        <b>WSPINACZKOWY DZIEŃ DZIECKA</b> w Dolinie Będkowskiej :)</h4>
+      <p><b>To jedyne takie wydarzenie w Jurze Krakowsko- Częstochowskiej.</b> </br>
+        Podczas największej wspinaczkowej imprezy w Polsce - <a href="https://www.facebook.com/IntegrowaniePrzezWspinanie/" target="_blank">
+          Integrowanie Przez Wspinanie</a>,
+        Wasze dzieci będą mogły spróbować swoich sił w prawdziwej wspinaczce skałkowej.
+        Będą miały okazję przeżyć niesamowitą przygodę w gronie rówieśników. </p>
+      <p> Wśród atrakcji przewidujemy:
+        <ul>
+        <li><p>Warsztaty wspinaczkowe w skałach pod opieką wykwalifikowanego instruktora. </p></li>
+        <li><p>Warsztaty na mobilnej ściance wspinaczkowej wyposażonej w system autoasekuracji Trueblue.</p> </li>
+        <li><p>Spotkania z niezwykłymi ludźmi gór. </p></li>
+        <li><p>6 godzin aktywności na świeżym powietrzu pod opieką młodej, wykwalifikowanej kadry.  </p></li>
+        <li><p>Niespodzianki! </li>
+        </ul>
+        Oprócz wspaniałej zabawy zapewniamy dzieciom ciepły posiłek. </p>
+        <p>
+          Na Wspinaczkowy Dzień Dziecka zapraszamy osoby między 5 a 16 rokiem życiem. Uczestnicy będą podzieleni na dwie grupy wiekowe( 5+. Oraz 11+).</p>
+        <p>Koszt imprezy to <b>89 zł</b></p>
+        <p>Szczegóły i zapisy na stronie: <a href="https://ipw.info.pl/dzieci/" target="_blank"> Integrowanie przez Wspinanie </a> </p>
     </div>
 
     <div style="height: auto; width: 100%; background-color: #1b75bcff; padding-top: 30px; text-align: center; padding-bottom: 30px;" id="kontakt">
