fixed some mobile issues, added new photo

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             <div class="slider">
               <div> <h3> Święto Flagi w Wadowicach </h3> <img src="src/zdj/swieto.jpg"> </img> </div>
               <div> <h3> Piknik w stadninie Hucuł </h3> <img src="src/zdj/stadnina.jpg"> </img> </div>
+              <div> <h3> Strefa dziecięca podczas Integrowania przez Wspinanie </h3> <img src="src/zdj/integrowanie.jpg"> </img> </div>
           </div>
         </div>
       </div>
@@ -486,13 +487,6 @@
                 </div>
                 <!-- xs -->
                 <div class="row-fluid hidden-xl hidden-lg hidden-md hidden-sm ofertaSzkoly">
-                  <div class="slider">
-                    <div> <img src="src/zdj/szkoly1.jpg"  > </img> </div>
-                    <div> <img src="src/zdj/szkoly2.jpg"  > </img> </div>
-                    <div> <img src="src/zdj/szkoly3.jpg"  > </img> </div>
-                    <div> <img src="src/zdj/szkoly4.jpg"  > </img> </div>
-                    <div> <img src="src/zdj/szkoly5.jpg"  > </img> </div>
-                  </div>
                   <!-- Pierwsza propozycja -->
                   <div class="col-xs-12 mobileOfertaSzkoly"> <p> Bal na sto par </p>
                   </div>
