--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Strona startowa -->
     <div style="margin-top: auto; width: 100vw; padding: 0; background-color: #ffffff"   id="top">
       <!-- zdjęcia dla większych urządzeń -->
-      <div class="hidden-xs"><img src="./src/firstImg.jpg"  class="firstImg"> </img></div>
+      <div class="hidden-xs"><img src="./src/firstimg.jpg"  class="firstImg"> </img></div>
       <!-- zdjęcie dla telefonów -->
       <div class="hidden-lg hidden-md hidden-sm"><img src="./src/firstimgMob.jpg"  class="firstImg" style="margin-top: 0;"> </img></div>
       <a href="#onas"> <img src="src/arrow.png" class="arrow-bot"> </img> </a>
@@ -169,7 +169,7 @@
             tworzyć strefę animacyjną otwartą 24 godziny na dobę przez trzy dni. </br></h4>
             <div class="slider">
               <div> <h3> Święto Flagi w Wadowicach </h3> <img src="src/zdj/swieto.jpg"> </img> </div>
-              <div> <h3> Piknik w stadninie Hucuł </h3> <img src="src/zdj/stadnina.jpg"> </img> </div>
+              <div> <h3> Piknik w stadninie Hucuł </h3> <img src="src/zdj/stadnina.JPG"> </img> </div>
               <div> <h3> Strefa dziecięca podczas Integrowania przez Wspinanie </h3> <img src="src/zdj/integrowanie.jpg"> </img> </div>
           </div>
         </div>
